--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,7 +8,11 @@ project(${ProjectName})
 set(SOURCES "main.cpp;test.cpp;../szlib.h")
 
 include_directories(AFTER ${CMAKE_CURRENT_SOURCE_DIR})
+
+if(USE_ZLIB)
 link_directories("zlib")
+endif(USE_ZLIB)
+
 set(FILES ${SOURCES})
 
 set(OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
@@ -34,12 +38,17 @@ if(MSVC)
     set_target_properties(${ProjectName} PROPERTIES
         LINK_FLAGS_DEBUG "${DEFAULT_CXX_LINK_FLAGS_DEBUG}"
         LINK_FLAGS_RELEASE "${DEFAULT_CXX_LINK_FLAGS_RELEASE}")
+
+if(USE_ZLIB)
     target_link_libraries(${ProjectName} "zlibstat.lib")
+endif(USE_ZLIB)
 
 elseif(UNIX)
     set(DEFAULT_CXX_FLAGS "-Wall -O2 -std=c++11")
     set(CMAKE_CXX_FLAGS "${DEFAULT_CXX_FLAGS}")
+if(USE_ZLIB)
     target_link_libraries(${ProjectName} "z")
+endif(USE_ZLIB)
 elseif(APPLE)
 endif()
 
